--- a/package.json
+++ b/package.json
@@ -4,14 +4,26 @@
   "description": "Boilerplate of Laravel Mix",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "dev": "npm run watch",
+    "prod": "npm run production"
   },
   "keywords": [],
   "author": "dsktschy",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.3",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "imagemin": "^6.0.0",
-    "laravel-mix": "^4.0.8"
+    "laravel-mix": "^4.0.12",
+    "laravel-mix-copy-watched": "^1.0.4",
+    "laravel-mix-pug": "git+https://github.com/dsktschy/laravel-mix-pug.git#develop-temporary",
+    "pug": "^2.0.3",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.21"
   },
   "repository": {
     "type": "git"
