--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.0.1",
     "imagemin": "^6.0.0",
+    "imagemin-gifsicle": "^6.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^7.0.0",
     "laravel-mix": "^4.0.14",
     "laravel-mix-copy-watched": "^2.0.1",
     "laravel-mix-pug": "git+https://github.com/dsktschy/laravel-mix-pug.git#develop-temporary",
