--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
+    "svg-spritemap-webpack-plugin": "^3.2.1",
     "vue-template-compiler": "^2.5.21"
   },
   "repository": {
