--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "laravel-mix": "^4.0.14",
     "laravel-mix-copy-watched": "^2.0.1",
     "laravel-mix-pug": "git+https://github.com/dsktschy/laravel-mix-pug.git#develop-temporary",
+    "prettier": "^1.16.2",
+    "prettier-loader": "^2.1.1",
     "pug": "^2.0.3",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
