--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "devDependencies": {
     "browser-sync": "^2.26.3",
     "browser-sync-webpack-plugin": "^2.0.1",
+    "eslint": "^5.14.1",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-vue": "^5.2.2",
     "imagemin": "^6.0.0",
     "imagemin-gifsicle": "^6.0.1",
     "imagemin-mozjpeg": "^8.0.0",
     "imagemin-pngquant": "^7.0.0",
     "laravel-mix": "^4.0.14",
     "laravel-mix-copy-watched": "^2.0.1",
+    "laravel-mix-eslint": "^0.1.2",
     "laravel-mix-pug": "git+https://github.com/dsktschy/laravel-mix-pug.git#develop-temporary",
     "prettier": "^1.16.2",
     "prettier-loader": "^2.1.1",
