--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "laravel-mix-copy-watched": "^2.0.1",
     "laravel-mix-eslint": "^0.1.2",
     "laravel-mix-pug": "git+https://github.com/dsktschy/laravel-mix-pug.git#develop-temporary",
+    "laravel-mix-stylelint": "^0.2.0",
     "prettier": "^1.16.2",
     "prettier-loader": "^2.1.1",
     "pug": "^2.0.3",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
     "sass-loader": "^7.1.0",
+    "stylelint": "^9.10.1",
+    "stylelint-config-recommended": "^2.1.0",
+    "stylelint-scss": "^3.5.3",
+    "stylelint-webpack-plugin": "^0.10.5",
     "svg-spritemap-webpack-plugin": "^3.2.1",
     "vue-template-compiler": "^2.5.21"
   },
