Use laravel-mix-imagemin

--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
     "babel-eslint": "^10.0.1",
     "browser-sync": "^2.26.5",
     "browser-sync-webpack-plugin": "^2.0.1",
+    "copy-webpack-plugin": "^5.0.3",
     "eslint": "^5.14.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.2",
-    "imagemin": "^6.0.0",
-    "imagemin-gifsicle": "^6.0.1",
     "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-pngquant": "^7.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
     "laravel-mix": "^4.0.15",
     "laravel-mix-copy-watched": "^2.1.2",
     "laravel-mix-eslint": "^0.1.2",
+    "laravel-mix-imagemin": "^1.0.0",
     "laravel-mix-polyfill": "^1.0.2",
     "laravel-mix-pug": "git+https://github.com/dsktschy/laravel-mix-pug.git#develop-temporary",
     "laravel-mix-stylelint": "^0.2.0",
+    "multimatch": "^4.0.0",
     "pug": "^2.0.3",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.15.2",
