--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "dsktschy",
   "license": "ISC",
   "devDependencies": {
+    "@dsktschy/laravel-mix-pug": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "browser-sync": "^2.26.5",
     "browser-sync-webpack-plugin": "^2.2.2",
@@ -27,7 +28,6 @@
     "laravel-mix-eslint": "^0.1.3",
     "laravel-mix-imagemin": "^1.0.0",
     "laravel-mix-polyfill": "^1.0.2",
-    "laravel-mix-pug": "git+https://github.com/dsktschy/laravel-mix-pug.git#develop-temporary",
     "laravel-mix-stylelint": "^0.2.0",
     "multimatch": "^4.0.0",
     "pug": "^2.0.3",
