Update packages and samples

--- a/.env-sample
+++ b/.env-sample
@@ -1,12 +1,19 @@
-MIX_SRC_RELATIVE_PATH=resources
-MIX_DIST_RELATIVE_PATH=public
-
-# If adding base path at beginning of output by mix function
-# MIX_BASE_PATH=/base/path/
+## Don't set trailing slash
+MIX_SRC_RELATIVE_PATH=src
+MIX_PUBLIC_RELATIVE_PATH=public
+MIX_DIST_RELATIVE_PATH=dist
 
 MIX_BROWSER_SYNC_HOST=localhost
 MIX_BROWSER_SYNC_PORT=3000
+# MIX_BROWSER_SYNC_PROXY=http://127.0.0.1:8000
 
-# If protocol of localhost is https, following fields are required
+## If protocol of localhost is https, following fields are required
 # MIX_BROWSER_SYNC_HTTPS_KEY=/Users/input-user-name/.ssl/localhost.key
 # MIX_BROWSER_SYNC_HTTPS_CERT=/Users/input-user-name/.ssl/localhost.crt
+
+## Support IE 11 or not
+# MIX_LEGACY_MODE=on
+
+## Output detailed source map or not
+## If on, building will be slow
+# MIX_DETAILED_SOURCE_MAP_MODE=on
