--- a/package.json
+++ b/package.json
@@ -4,48 +4,44 @@
   "description": "Boilerplate for Static site, based on Laravel Mix",
   "main": "index.js",
   "scripts": {
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "dev": "npm run watch",
-    "prod": "npm run production"
+    "dev": "mix watch",
+    "build": "mix --production && bin/compress-images.js && bin/convert-images.js",
+    "prod": "npm run build",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "dsktschy",
   "license": "ISC",
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "browser-sync": "^2.26.12",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "copy-webpack-plugin": "^5.1.2",
-    "cross-env": "^6.0.0",
-    "eslint": "^5.16.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-vue": "^5.2.2",
-    "imagemin-mozjpeg": "^8.0.0",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "laravel-mix": "^5.0.5",
-    "laravel-mix-copy-watched": "^2.2.0",
-    "laravel-mix-ejs": "^1.1.3",
-    "laravel-mix-eslint": "^0.1.3",
-    "laravel-mix-imagemin": "^1.0.0",
-    "laravel-mix-polyfill": "^1.1.1",
-    "laravel-mix-stylelint": "^0.2.0",
-    "multimatch": "^4.0.0",
-    "resolve-url-loader": "^2.3.2",
-    "sass": "^1.20.1",
-    "sass-loader": "^7.1.0",
-    "stylelint": "^13.7.0",
-    "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-scss": "^3.18.0",
-    "stylelint-webpack-plugin": "^1.2.3",
-    "svg-spritemap-webpack-plugin": "^3.5.9",
-    "vue-template-compiler": "^2.6.10"
+    "@babel/eslint-parser": "^7.17.0",
+    "browser-sync": "^2.27.7",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "dotenv": "^16.0.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "fast-glob": "^3.2.11",
+    "husky": "^7.0.4",
+    "laravel-mix": "^6.0.43",
+    "laravel-mix-copy-watched": "^3.0.0-alpha.0",
+    "laravel-mix-ejs": "^2.0.0-alpha.0",
+    "laravel-mix-eslint": "^0.2.0",
+    "laravel-mix-polyfill": "^3.0.1",
+    "lint-staged": "^12.3.5",
+    "node-filter-async": "^3.0.0",
+    "prettier": "^2.5.1",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "sharp": "^0.30.2",
+    "stylelint": "^14.5.3",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "svg-spritemap-webpack-plugin": "^4.4.0"
   },
   "repository": {
     "type": "git"
   },
   "engines": {
-    "node": ">=10.14.2",
-    "npm": ">=6.4.1"
+    "node": ">=14",
+    "npm": ">=7"
   }
 }
