--- a/.env-sample
+++ b/.env-sample
@@ -5,11 +5,12 @@ MIX_DIST_RELATIVE_PATH=dist
 
 MIX_BROWSER_SYNC_HOST=localhost
 MIX_BROWSER_SYNC_PORT=3000
+## Do not set '.local' domain. Because it makes BrowserSync slow
 # MIX_BROWSER_SYNC_PROXY=http://127.0.0.1:8000
 
 ## If protocol of localhost is https, following fields are required
-# MIX_BROWSER_SYNC_HTTPS_KEY=/Users/input-user-name/.ssl/localhost.key
-# MIX_BROWSER_SYNC_HTTPS_CERT=/Users/input-user-name/.ssl/localhost.crt
+# MIX_BROWSER_SYNC_HTTPS_KEY=/path/to/self-signed.key
+# MIX_BROWSER_SYNC_HTTPS_CERT=/path/to/self-signed.crt
 
 ## Support IE 11 or not
 # MIX_LEGACY_MODE=on
