Enable to set prefix to manifest value

--- a/.env-sample
+++ b/.env-sample
@@ -3,6 +3,10 @@ MIX_SRC_RELATIVE_PATH=src
 MIX_PUBLIC_RELATIVE_PATH=public
 MIX_DIST_RELATIVE_PATH=dist
 
+## Prefix for manifest values
+## Don't set trailing slash
+# MIX_MANIFEST_PREFIX=/foo-bar
+
 MIX_BROWSER_SYNC_HOST=localhost
 MIX_BROWSER_SYNC_PORT=3000
 ## Do not set '.local' domain. Because it makes BrowserSync slow
