--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "fast-glob": "^3.2.11",
     "husky": "^7.0.4",
     "laravel-mix": "^6.0.43",
-    "laravel-mix-copy-watched": "^3.0.0-alpha.0",
+    "laravel-mix-copy-watched": "^3.0.0",
     "laravel-mix-ejs": "^2.0.0-alpha.3",
     "laravel-mix-eslint": "^0.2.0",
     "laravel-mix-polyfill": "^3.0.1",
